# my_claude_code_hud

./: .gitignore  CODE_REUSE_ANALYSIS.md  CODE_REVIEW.md  DUPLICATION_MAP.md  README.md  REFACTOR_RECIPES.md  hook.py  pyproject.toml
.superpowers/brainstorm/14678-1774286295/: .server-stopped  tui-layout.html
.superpowers/brainstorm/4416-1774280036/: .server-stopped  display-format.html  info-panels.html
claude_hud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/superpowers/plans/: 2026-03-24-claude-hud.md  2026-03-25-claude-hud-v2.md  2026-03-26-current-widget.md
docs/superpowers/specs/: 2026-03-24-claude-hud-design.md  2026-03-25-claude-hud-v2-design.md  2026-03-26-current-widget-design.md
hud/: __init__.py  __main__.py  app.py  colors.py  cost.py  install.py  models.py  parser.py  watcher.py
hud/widgets/: __init__.py  active.py  current.py  display.py  event_stream.py  history.py  summary.py
tests/: _hook_helpers.py  test_active_widget.py  test_app.py  test_cost.py  test_current_widget.py  test_history_widget.py  test_hook.py  test_install.py  test_integration.py  test_models.py  test_parser.py  test_parser_hierarchy.py  test_watcher.py
