[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-hud"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
claude-hud = "hud.__main__:main"
